# xenia

./: .gitignore  CMakeLists.txt  README.md  bpWriter.cxx  contour.cxx  converter.cxx  copier.cxx  cropper.cxx  ext_faces.cxx  gradient.cxx  hello.cxx  noop.cxx  reader.cxx  render.cxx  runClover.sh  runCloverContour.sh  runContour.sh  runConvertVTK.sh  runConverter.sh  runRenderContour.sh  runRenderStreamlines.sh  runStreamlines.sh  service.cxx  streamlines.cxx
examples/: CMakeLists.txt
examples/cloverleaf3d/: cloverleaf3d.json
examples/gray-scott/: CMakeLists.txt  fides-gray-scott.json  gray-scott.cpp  gray-scott.h  main.cpp  restart.cpp  settings.h  writer.cpp  writer.h
examples/scripts/: displayU.sh  displayV.sh  imgplayer.py  renderU.sh  renderV.sh  runClip.sh  runContourU.sh  runContourV.sh  runConverter.sh  runSim.sh
utils/: CommandLineArgParser.h  Debug.cxx  Debug.h  ReadData.cxx  ReadData.h  WriteData.cxx  WriteData.h
